<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">SalesD</string>

    <!-- common -->
    <string name="ok">确定</string>
    <string name="close">关闭</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="register">注册</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="not_save">不保存</string>
    <string name="home">首页</string>
    <string name="settings">设置</string>
    <string name="refresh">刷新</string>
    <string name="retry">重试</string>
    <string name="share">分享</string>
    <string name="add">新建</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="done">完成</string>
    <string name="more">更多</string>

    <string name="colon">：</string>
    <string name="comma">，</string>
    <string name="zero">0</string>
    <string name="none">无</string>
    <string name="none_u"><u>无</u></string>

    <string name="owner">所有者</string>

    <!-- user info -->
    <string name="user_info_prompt">&lt;用户信息&gt;</string>
    <string name="user_annual_target">年度目标：<xliff:g id="TARGET">%d</xliff:g></string>
    <string name="user_completed">已完成：<xliff:g id="COMPLETED">%d</xliff:g></string>
    <string name="hint_user_name">用户姓名</string>
    <string name="hint_user_annual_target">年度目标</string>
    <string name="hint_user_completed">已完成</string>
    <string name="dlg_title_user_info">用户信息</string>
    <string name="tip_invalid_annual_target_or_completed">无效的“年度目标”与“已完成”信息</string>

    <!-- projects -->
    <string name="projects">项目</string>
    <string name="add_project">新建项目</string>
    <string name="project_name">项目名称</string>
    <string name="project_amount">总金额</string>
    <string name="project_priority">重要程度</string>
    <string name="project_status">项目状态</string>
    <string name="project_description">详细描述</string>
    <string name="no_project">没有项目</string>

    <string name="dlg_message_adding_new_project">正在创建新项目</string>
    <string name="dlg_message_updating_project">正在更新项目</string>
    <string name="dlg_message_syncing_project">正在同步项目</string>

    <!-- config -->
    <string name="config">项目配置</string>
    <string name="modify_config">修改配置</string>
    <string name="no_config">没有配置</string>

    <string name="add_new_field">添加新条目</string>
    <string name="hint_config_type">设备类型</string>
    <string name="description_minus_button">"删除"</string>
    <string name="description_plus_button">"添加"</string>

    <!-- customers -->
    <string name="customers">客户</string>
    <string name="add_customer">新建客户</string>
    <string name="introduce_customer">添加客户</string>
    <string name="customer_name">客户名称</string>
    <string name="customer_company_address">客户地址</string>
    <string name="customer_category">客户分类</string>
    <string name="customer_leader">客户经理</string>
    <string name="customer_business_description">业务范围简介</string>
    <string name="no_customer">没有客户</string>

    <string name="customer_category_host_manufacturer">主机厂</string>
    <string name="customer_category_institute_of_design">设计院</string>
    <string name="customer_category_general_contractor">总包商</string>
    <string name="customer_category_direct_owner">直接业主</string>
    <string name="customer_category_others">其他</string>

    <string name="dlg_title_pick_customer">请选择客户公司</string>
    <string name="dlg_message_fetching_customers">正在获取客户列表，请稍候。</string>
    <string name="dlg_message_create_customer">您没有可选择的客户，确定要新建一个客户吗？</string>

    <string name="dlg_title_select_contact_template">请选择联系人模板</string>

    <!-- contacts -->
    <string name="contacts">联系人</string>
    <string name="add_contact">新建联系人</string>
    <string name="contact_name">联系人姓名</string>
    <string name="contact_phone_number">电话</string>
    <string name="contact_email">电子邮件</string>
    <string name="contact_office_location">办公室位置</string>
    <string name="contact_deparment">部门</string>
    <string name="contact_title">职位</string>
    <string name="contact_direct_leader">直接领导</string>
    <string name="contact_character">性格特点</string>
    <string name="no_contact">没有联系人</string>

    <string name="followers">下属</string>
    <string name="introduce_follower">添加下属</string>
    <string name="no_follower">没有下属</string>

    <!-- reminders and schedules -->
    <string name="visit_reminders">拜访提醒</string>
    <string name="visit_schedules">拜访计划</string>
    <string name="visit_records">拜访记录</string>
    <string name="show_more">查看更多</string>
    <string name="add_visit_schedule">新建拜访计划</string>

    <!-- database -->
    <string name="tip_field_could_not_be_null"><xliff:g id="FIELD">%s</xliff:g>不能为空</string>
    <string name="tip_save_succeed">保存成功</string>
    <string name="tip_save_failed">保存失败</string>

    <!-- network -->
    <string name="network_not_available">无法连接至网络，请检查网络设置</string>
    <string name="tip_load_failed_network_error">网络异常，请稍后再试</string>
    <string name="tip_load_failed_server_error">加载失败，请重试~</string>
    <string name="network_error_with_status_code">网络错误(%d)</string>

</resources>
