<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dialog_left_padding"
        android:paddingTop="@dimen/dialog_top_padding"
        android:paddingRight="@dimen/dialog_right_padding"
        android:paddingBottom="@dimen/dialog_bottom_padding"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_bottom_padding"
            android:paddingTop="8dip"
            android:paddingBottom="8dip"
            android:hint="@string/hint_user_name"
            />

        <EditText
            android:id="@+id/user_annual_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_bottom_padding"
            android:paddingTop="8dip"
            android:paddingBottom="8dip"
            android:hint="@string/hint_user_annual_target"
            android:inputType="number"
            />

        <EditText
            android:id="@+id/user_completed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dip"
            android:paddingBottom="8dip"
            android:hint="@string/hint_user_completed"
            android:inputType="number"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/dividerVertical"
        />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            />
    </LinearLayout>
</LinearLayout>
