<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/default_activity_left_padding"
    android:paddingTop="@dimen/default_activity_top_padding"
    android:paddingRight="@dimen/default_activity_right_padding"
    android:paddingBottom="@dimen/default_activity_bottom_padding"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/edit_activity_label_padding_left"
        android:paddingTop="@dimen/edit_activity_label_padding_top"
        android:paddingBottom="@dimen/edit_activity_label_padding_bottom"
        android:text="@string/project_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/edit_activity_input_padding_left"
        android:paddingTop="@dimen/edit_activity_input_padding_top"
        android:paddingBottom="@dimen/edit_activity_input_padding_bottom"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="16sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/edit_activity_label_padding_left"
        android:paddingTop="@dimen/edit_activity_label_padding_top"
        android:paddingBottom="@dimen/edit_activity_label_padding_bottom"
        android:text="@string/project_amount"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />
    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/edit_activity_input_padding_left"
        android:paddingTop="@dimen/edit_activity_input_padding_top"
        android:paddingBottom="@dimen/edit_activity_input_padding_bottom"
        android:inputType="number"
        android:singleLine="true"
        android:hint="@string/zero"
        android:textSize="16sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/edit_activity_label_padding_left"
        android:paddingTop="@dimen/edit_activity_label_padding_top"
        android:paddingBottom="@dimen/edit_activity_label_padding_bottom"
        android:text="@string/project_priority"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />
    <Spinner
        android:id="@+id/priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/edit_activity_input_padding_top"
        android:paddingBottom="@dimen/edit_activity_input_padding_bottom"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/edit_activity_label_padding_left"
        android:paddingTop="@dimen/edit_activity_label_padding_top"
        android:paddingBottom="@dimen/edit_activity_label_padding_bottom"
        android:text="@string/project_status"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />
    <Spinner
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/edit_activity_input_padding_top"
        android:paddingBottom="@dimen/edit_activity_input_padding_bottom"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/edit_activity_label_padding_left"
        android:paddingTop="@dimen/edit_activity_label_padding_top"
        android:paddingBottom="@dimen/edit_activity_label_padding_bottom"
        android:text="@string/project_description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />
    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/edit_activity_input_padding_top"
        android:paddingBottom="@dimen/edit_activity_input_padding_bottom"
        android:gravity="left|top"
        android:inputType="textAutoCorrect|textCapSentences|textMultiLine"
        android:lines="5"
        />
</LinearLayout>
