<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/progress_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/default_activity_left_padding"
        android:paddingTop="@dimen/default_activity_top_padding"
        android:paddingRight="@dimen/default_activity_right_padding"
        android:paddingBottom="@dimen/default_activity_bottom_padding"
        android:orientation="horizontal"
        >
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingTop="4dip"
            android:paddingBottom="4dip"
            android:text="@string/dlg_message_fetching_customers"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="17sp"
            />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/dividerVertical"
        />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:visibility="gone"
            />
    </LinearLayout>
</LinearLayout>
