<?xml version="1.0" encoding="utf-8"?>
<com.mctlab.salesd.project.ConfigEditFieldView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <EditText
        android:id="@+id/type"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_marginLeft="2dip"
        android:layout_gravity="center_vertical"
        android:paddingLeft="@dimen/edit_activity_input_padding_left"
        android:paddingTop="@dimen/edit_activity_input_padding_top"
        android:paddingBottom="@dimen/edit_activity_input_padding_bottom"
        android:inputType="textNoSuggestions"
        android:hint="@string/hint_config_type"
        android:textSize="16sp"
        />
    <EditText
        android:id="@+id/number"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="2dip"
        android:layout_gravity="center_vertical"
        android:paddingLeft="@dimen/edit_activity_input_padding_left"
        android:paddingTop="@dimen/edit_activity_input_padding_top"
        android:paddingBottom="@dimen/edit_activity_input_padding_bottom"
        android:inputType="number"
        android:singleLine="true"
        android:hint="@string/zero"
        android:textSize="16sp"
        />
    <FrameLayout
        android:id="@+id/delete_button_container"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/editor_min_field_height"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="2dip"
        android:layout_gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:duplicateParentState="true"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_remove_field"
            android:paddingLeft="@dimen/editor_round_button_padding_left"
            android:paddingRight="@dimen/editor_round_button_padding_right"
            android:paddingTop="@dimen/editor_round_button_padding_top"
            android:paddingBottom="@dimen/editor_round_button_padding_bottom"
            android:contentDescription="@string/description_minus_button"
            />
    </FrameLayout>
</com.mctlab.salesd.project.ConfigEditFieldView>
